kubernetes/apps/default/jellyseerr/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  labels:
    app: jellyseerr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      containers:
      - name: jellyseerr
        image: fallenbagel/jellyseerr:2.7.3
        ports:
        - containerPort: 5055
        volumeMounts:
        - name: config-volume
          mountPath: /app/config
        livenessProbe:
          exec:
            command:
            - wget
            - --no-verbose
            - --tries=1
            - --spider
            - http://localhost:5055/api/v1/status
          initialDelaySeconds: 20
          periodSeconds: 15
          timeoutSeconds: 3
          failureThreshold: 3
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: jellyseerr-config-pvc
