kubernetes/apps/default/jellyseerr/svc.yaml
# --- SERVICE ---
---
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: default
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.219
  selector:
    app: jellyseerr
  ports:
    - name: http
      protocol: TCP
      port: 5055
      targetPort: 5055
